godoc: added Authorizazion parameter Implemented LogoutHandler Login: restyling ObjectLinkSelector: used '' instead of '0' to clear the field FE: calling /logout and reloading the navbar
